# playroom

./: .gitignore  AGENTS.md  Makefile  opencode.jsonc
.github/workflows/: hr-jd-knowledge-review.yml  hr-playbook-auto-pr.yml
.opencode/: CONTEXT.md
Obsidian/: 2026-02-01.md
Obsidian/.obsidian/: daily-notes.json  (+1 more)
heal/: CLAUDE.md
kabu-saas/: .env.example  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
kabu-saas/backend/: alembic.ini  pyproject.toml  requirements.txt
kabu-saas/backend/alembic/: env.py
kabu-saas/backend/app/: config.py  database.py  dependencies.py  main.py
kabu-saas/backend/app/analysis/: __init__.py  scoring.py  signal_detector.py  technical.py  trade_planner.py
kabu-saas/backend/app/collectors/: __init__.py  fundamental_collector.py  master_collector.py  price_collector.py
kabu-saas/backend/app/models/: __init__.py  base.py  data_collection_log.py  fundamental.py  portfolio.py  screening.py  signal.py  stock.py  technical.py  trade.py  user.py  watchlist.py
kabu-saas/backend/app/routers/: agent.py  auth.py  dashboard.py  data.py  portfolio.py  screening.py  settings.py  signals.py  stocks.py  trades.py  watchlists.py
kabu-saas/backend/app/scheduler/: __init__.py  jobs.py
kabu-saas/backend/app/schemas/: __init__.py  agent.py  auth.py  dashboard.py  portfolio.py  screening.py  settings.py  signal.py  stock.py  trade.py  watchlist.py
kabu-saas/backend/app/services/: __init__.py  pipeline.py  planner.py  portfolio_service.py
kabu-saas/backend/tests/: conftest.py
kabu-saas/backend/tests/test_routers/: test_health.py
(+138 files in other folders)
